--- a/flipbook.css
+++ b/flipbook.css
@@ -11,26 +11,28 @@ body {
 
 .container {
     margin: 0 auto;
+    padding: 20px;
 }
 
-#flipbook {
+.flipbook {
     margin: 0 auto;
+    transition: margin-left 0.25s ease-out;
 }
 
-#flipbook .page {
+.flipbook .page {
     background-color: white;
 }
 
-.cover {
+.hard {
     background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cover img {
-    max-width: 100%;
-    max-height: 100%;
+.hard img {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
@@ -61,4 +63,9 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* Add visual feedback for page corners */
+.flipbook .page-wrapper {
+    cursor: pointer;
 }
